--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -87,16 +87,322 @@ header {
 }
 /* aside */
 
+$background-color_1: rgb(50, 50, 50);
+
 aside {
-	background-image: linear-gradient( 0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ) ,url(../img/aside.png);
-	padding: 40px;
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-position: center;
+	.container {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		background-image: linear-gradient( 0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ) ,url(../img/aside.png);
+		background-repeat: no-repeat;
+		background-size: cover;
+		padding: 45px;
+		margin: auto;
+	}
+}
+#info {
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	text-align: center;
+	background-color: $background-color_1;
+	h2 {
+		font-size: 3vw;
+	}
+	button {
+		font-size: 1vw;
+	}
+}
+.imgs__info {
+	display: flex;
 }
 
+
 /* footer */
+$color_1: rgb(253, 125, 21);
+
 footer {
 	background-image: linear-gradient( 0deg, rgba(73, 69, 69, 0.5), rgba(0, 0, 0, 0.5) ) ,url(../img/pexels-photo.jpg);
-	padding: 30px;
+	p {
+		margin: 0;
+		color: $color_1;
+	}
+	.container {
+		height: 100px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		text-align: center;
+	}
 }
+.iconos {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	ul {
+		li {
+			display: inline-block;
+			margin: 0 5px;
+			width: 50px;
+			text-align: center;
+			a {
+				display: block;
+				padding: 0 10px;
+				color: $color_1;
+				line-height: 50px;
+				font-size: 20px;
+				box-shadow: 0 3px 0px rgba(0, 0, 0, 0.2);
+				transition: .2s;
+			}
+		}
+		&:hover {
+			a {
+				filter: blur(2px);
+			}
+		}
+	}
+}
+
+/* transformaciones */
+
+.iconos {
+	ul {
+		li {
+			a {
+				&:hover {
+					transform: translateY(-3px) scale(1.05);
+					box-shadow: 0 5px 0px rgba(0, 0, 0, 0.4);
+					filter: none;
+				}
+			}
+			.facebook {
+				&:hover {
+					background: var(--facebook);
+				}
+			}
+		}
+	}
+}
+
+
+/* SERVICIOS */
+
+$color_1: rgb(253, 125, 21);
+$font-family_1: 'Chakra Petch', sans-serif;
+$background-color_1: rgb(50, 50, 50);
+
+.grid {
+	display: grid;
+	gap: 5px;
+	padding: 5px;
+	grid-template-columns: auto auto auto;
+	grid-template-rows: auto auto auto;
+	.tituloss {
+		grid-column: 1/-1;
+	}
+	div {
+		padding: 5px;
+		background-color: $background-color_1;
+		color: $color_1;
+		text-align: center;
+		display: flex;
+		flex-direction: column;
+		h4 {
+			font-family: $font-family_1;
+			text-align: center;
+			font-size: 25px;
+		}
+	}
+	.img__clase {
+		width: 100%;
+		height: auto;
+	}
+	.sidebar {
+		grid-column: 1 / -1;
+	}
+
+    
+
+}
+
+/* @media */
+
+$color_1: rgb(253, 125, 21);
+$color_2: aliceblue;
+$background-color_1: rgb(50, 50, 50);
+$background-color_2: rgb(253, 125, 21);
+
+@media (min-width: 768px) {
+	body {
+		background: linear-gradient(to top, #f77b28,#181818 , #665b4f, #f77b28);
+	}
+	button {
+		font-size: 20px;
+		color: $color_1;
+		font-weight: bold;
+		padding: 10px 50px;
+		border-radius: 20px;
+		border: 3px solid black;
+		border: 2px 2px 10px rgb(0, 0, 0, 0,5);
+		background-color: $background-color_1;
+		background-position: center center;
+		background-repeat: no-repeat;
+		&:hover {
+			background-color: $background-color_2;
+			color: $color_2;
+		}
+	}
+
+    /* encabezado */
+
+
+header {
+	.container {
+		flex-direction: row;
+		justify-content: center;
+	}
+	.menu {
+		flex-direction: row;
+		padding-bottom: 0;
+		padding-bottom: 10px;
+	}
+}
+/* index */
+
+$color_1: black;
+
+#nosotros {
+	.container {
+		display: flex;
+		flex-direction: initial;
+		justify-content: center;
+	}
+	h2 {
+		color: $color_1;
+	}
+	.texto {
+		width: 50%;
+		max-width: 600px;
+		font-weight: bold;
+		padding: 20px 150px;
+		text-align: initial;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+	}
+}
+.profes {
+	display: flex;
+	justify-content: center;
+}
+#profesionales {
+	p {
+		display: block;
+		margin-bottom: 30px;
+	}
+}
+.carta {
+	padding: 50px;
+	background-size: 100% 150px;
+	background-repeat: no-repeat;
+}
+
+/* grid full */
+
+$font-family_1: 'Chakra Petch', sans-serif;
+$background-color_1: aliceblue;
+
+.grid {
+	display: grid;
+	gap: 5px;
+	padding: 5px;
+	grid-template-columns: auto auto auto;
+	grid-template-rows: auto auto auto;
+	div {
+		text-align: center;
+		border: 5px solid black;
+		justify-content: center;
+		padding: 5px;
+	}
+	.tituloss {
+		grid-area: 1 / 1 / 2 / 5;
+	}
+	.texto1 {
+		grid-area: 2 / 1 / 3 / 2;
+		display: flex;
+		flex-direction: row;
+	}
+	.texto2 {
+		display: flex;
+		flex-direction: row;
+		grid-area: 3 / 1 / 4 / 2;
+	}
+	.texto3 {
+		display: flex;
+		flex-direction: row;
+		grid-area: 4/ 1 / 5 / 2;
+	}
+	.texto4 {
+		display: flex;
+		flex-direction: row;
+		grid-area: 5/ 1 / 6 / 2;
+	}
+	.img__clase1 {
+		grid-area: 2 / 2 / 3 /3;
+	}
+	.img__clase2 {
+		grid-area: 3 / 2 / 4 /3;
+	}
+	.img__clase3 {
+		grid-area: 4 / 2 / 4 / 3;
+	}
+	.img__clase4 {
+		grid-area: 5 / 2 / 5 / 3;
+	}
+
+    /* sidebar */
+	.sidebar {
+		display: flex;
+		flex-direction: column;
+		justify-content: space-evenly;
+		grid-area: 2 / 3 / 6 / 5;
+	}
+	h3 {
+		font-family: $font-family_1;
+		font-size: 30px;
+	}
+	p {
+		font-size: 18px;
+		margin: auto;
+	}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+}
+
