--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -313,53 +313,56 @@ $color_1: black;
 $font-family_1: 'Chakra Petch', sans-serif;
 $background-color_1: aliceblue;
 
-.grid {
-	display: grid;
-	gap: 5px;
-	padding: 5px;
-	grid-template-columns: auto auto auto;
-	grid-template-rows: auto auto auto;
-	div {
-		text-align: center;
-		border: 5px solid black;
-		justify-content: center;
-		padding: 5px;
-	}
-	.tituloss {
-		grid-area: 1 / 1 / 2 / 5;
-	}
-	.texto1 {
-		grid-area: 2 / 1 / 3 / 2;
-		display: flex;
-		flex-direction: row;
-	}
-	.texto2 {
-		display: flex;
-		flex-direction: row;
-		grid-area: 3 / 1 / 4 / 2;
-	}
-	.texto3 {
-		display: flex;
-		flex-direction: row;
-		grid-area: 4/ 1 / 5 / 2;
-	}
-	.texto4 {
-		display: flex;
-		flex-direction: row;
-		grid-area: 5/ 1 / 6 / 2;
-	}
-	.img__clase1 {
-		grid-area: 2 / 2 / 3 /3;
-	}
-	.img__clase2 {
-		grid-area: 3 / 2 / 4 /3;
-	}
-	.img__clase3 {
-		grid-area: 4 / 2 / 4 / 3;
-	}
-	.img__clase4 {
-		grid-area: 5 / 2 / 5 / 3;
-	}
+.main{
+    .grid {
+        display: grid;
+        gap: 5px;
+        padding: 5px;
+        grid-template-columns: auto auto auto;
+        grid-template-rows: auto auto auto;
+        div {
+            text-align: center;
+            border: 5px solid black;
+            justify-content: center;
+            padding: 5px;
+        }
+        .tituloss {
+            grid-area: 1 / 1 / 2 / 5;
+        }
+        .texto1 {
+            grid-area: 2 / 1 / 3 / 2;
+            display: flex;
+            flex-direction: row;
+        }
+        .texto2 {
+            display: flex;
+            flex-direction: row;
+            grid-area: 3 / 1 / 4 / 2;
+        }
+        .texto3 {
+            display: flex;
+            flex-direction: row;
+            grid-area: 4/ 1 / 5 / 2;
+        }
+        .texto4 {
+            display: flex;
+            flex-direction: row;
+            grid-area: 5/ 1 / 6 / 2;
+        }
+        .img__clase1 {
+            grid-area: 2 / 2 / 3 /3;
+        }
+        .img__clase2 {
+            grid-area: 3 / 2 / 4 /3;
+        }
+        .img__clase3 {
+            grid-area: 4 / 2 / 4 / 3;
+        }
+        .img__clase4 {
+            grid-area: 5 / 2 / 5 / 3;
+        }
+}
+
 
     /* sidebar */
 	.sidebar {
@@ -376,6 +379,7 @@ $background-color_1: aliceblue;
 		font-size: 18px;
 		margin: auto;
 	}
+
 }
 
 
